Sort Service Templates by Csp